fix tech icons alignment

--- a/Portfolio Page/Style/index-en.scss
+++ b/Portfolio Page/Style/index-en.scss
@@ -462,9 +462,9 @@ $fw: 600;
 
     #techno {
         img {
-            width: 40px;
-            height: 40px;
-            margin: 5px 10px;
+            width: 35px;
+            height: 35px;
+            margin: 5px 10px 0 5px;
         }
     }
 
